--- a/public/static/lib/bootstrap-fileinput/examples/index.html
+++ b/public/static/lib/bootstrap-fileinput/examples/index.html
@@ -22,22 +22,18 @@
 </head>
 <body>
 <div class="container my-4">
-    <h1>Bootstrap File Input Examples
-        <small><a href="https://github.com/kartik-v/bootstrap-fileinput-samples"><i
-                class="glyphicon glyphicon-download"></i> Download Sample Files</a></small>
-    </h1>
-    <hr>
+
     <form enctype="multipart/form-data">
         <div class="file-loading">
             <input id="kv-explorer" type="file" multiple>
         </div>
         <br>
-        <div class="file-loading">
+        <!-- <div class="file-loading">
             <input id="file-0a" class="file" type="file" multiple data-min-file-count="1" data-theme="fas">
         </div>
         <br>
         <button type="submit" class="btn btn-primary">Submit</button>
-        <button type="reset" class="btn btn-outline-secondary">Reset</button>
+        <button type="reset" class="btn btn-outline-secondary">Reset</button> -->
     </form>
     <hr>
     <h5>Preupload Validation</h5>
